[gd_scene load_steps=8 format=2]

[ext_resource path="res://resorces/walls.png" type="Texture" id=1]
[ext_resource path="res://resorces/dynastium.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://new_dynamicfont.tres" type="DynamicFont" id=3]
[ext_resource path="res://menus/main_menu.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )

[sub_resource type="TileSet" id=3]
0/name = "walls.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 2 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[node name="main_menu" type="Node2D"]
script = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 264, 424 )
current = true
zoom = Vector2( 0.762, 0.766 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 120.0
margin_top = 320.0
margin_right = 392.0
margin_bottom = 360.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect"]
margin_left = 24.0
margin_top = 8.00001
margin_right = 250.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 1 )
text = "A Researcher and her Rat
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="ColorRect"]
position = Vector2( -120, -320 )
tile_set = SubResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 851960, 0, 0, 851961, 0, 0, 851962, 0, 0, 851963, 0, 0, 851964, 0, 0, 851965, 0, 0, 851966, 0, 0, 851967, 0, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 786452, 0, 0, 786453, 0, 0, 786454, 0, 0, 786455, 0, 0, 786456, 0, 0, 786457, 0, 0, 786458, 0, 0, 786459, 0, 0, 786460, 0, 0, 786461, 0, 0, 786462, 0, 0, 786463, 0, 0, 786464, 0, 0, 786465, 0, 0, 786466, 0, 0, 786467, 0, 0, 786468, 0, 0, 786469, 0, 0, 786470, 0, 0, 786471, 0, 0, 786472, 0, 0, 917496, 0, 0, 852008, 0, 0, 983032, 0, 0, 917544, 0, 0, 1048568, 0, 0, 983080, 0, 0, 1114104, 0, 0, 1048616, 0, 0, 1179640, 0, 0, 1114152, 0, 0, 1245176, 0, 0, 1179688, 0, 0, 1310712, 0, 0, 1245191, 0, 0, 1245192, 0, 0, 1245193, 0, 0, 1245194, 0, 0, 1245195, 0, 0, 1245196, 0, 0, 1245197, 0, 0, 1245198, 0, 0, 1245199, 0, 0, 1245200, 0, 0, 1245201, 0, 0, 1245202, 0, 0, 1245203, 0, 0, 1245204, 0, 0, 1245205, 0, 0, 1245206, 0, 0, 1245207, 0, 0, 1245208, 0, 0, 1245224, 0, 0, 1376248, 0, 0, 1310727, 0, 0, 1310744, 0, 0, 1310760, 0, 0, 1441784, 0, 0, 1376263, 0, 0, 1376280, 0, 0, 1376296, 0, 0, 1507320, 0, 0, 1441799, 0, 0, 1441800, 0, 0, 1441801, 0, 0, 1441802, 0, 0, 1441803, 0, 0, 1441804, 0, 0, 1441805, 0, 0, 1441806, 0, 0, 1441807, 0, 0, 1441808, 0, 0, 1441809, 0, 0, 1441810, 0, 0, 1441811, 0, 0, 1441812, 0, 0, 1441813, 0, 0, 1441814, 0, 0, 1441815, 0, 0, 1441816, 0, 0, 1441832, 0, 0, 1572856, 0, 0, 1507368, 0, 0, 1638392, 0, 0, 1572904, 0, 0, 1703928, 0, 0, 1638440, 0, 0, 1769464, 0, 0, 1703976, 0, 0, 1835000, 0, 0, 1769512, 0, 0, 1900536, 0, 0, 1835048, 0, 0, 1966072, 0, 0, 1900584, 0, 0, 2031608, 0, 0, 1966120, 0, 0, 2097144, 0, 0, 2031656, 0, 0, 2162680, 0, 0, 2097192, 0, 0, 2228216, 0, 0, 2162728, 0, 0, 2293752, 0, 0, 2228264, 0, 0, 2359288, 0, 0, 2293800, 0, 0, 2424824, 0, 0, 2359336, 0, 0, 2490360, 0, 0, 2424872, 0, 0, 2555896, 0, 0, 2490408, 0, 0, 2621432, 0, 0, 2555944, 0, 0, 2686968, 0, 0, 2686969, 0, 0, 2686970, 0, 0, 2686971, 0, 0, 2686972, 0, 0, 2686973, 0, 0, 2686974, 0, 0, 2686975, 0, 0, 2621440, 0, 0, 2621441, 0, 0, 2621442, 0, 0, 2621443, 0, 0, 2621444, 0, 0, 2621445, 0, 0, 2621446, 0, 0, 2621447, 0, 0, 2621448, 0, 0, 2621449, 0, 0, 2621450, 0, 0, 2621451, 0, 0, 2621452, 0, 0, 2621453, 0, 0, 2621454, 0, 0, 2621455, 0, 0, 2621456, 0, 0, 2621457, 0, 0, 2621458, 0, 0, 2621459, 0, 0, 2621460, 0, 0, 2621461, 0, 0, 2621462, 0, 0, 2621463, 0, 0, 2621464, 0, 0, 2621465, 0, 0, 2621466, 0, 0, 2621467, 0, 0, 2621468, 0, 0, 2621469, 0, 0, 2621470, 0, 0, 2621471, 0, 0, 2621472, 0, 0, 2621473, 0, 0, 2621474, 0, 0, 2621475, 0, 0, 2621476, 0, 0, 2621477, 0, 0, 2621478, 0, 0, 2621479, 0, 0, 2621480, 0, 0 )

[node name="new_game" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 184.0
margin_top = 408.0
margin_right = 336.0
margin_bottom = 430.0
custom_fonts/font = ExtResource( 3 )
text = "Start New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level_select" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 200.0
margin_top = 440.0
margin_right = 315.0
margin_bottom = 460.0
custom_fonts/font = ExtResource( 3 )
text = "Level Select"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fullscreen" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 200.0
margin_top = 472.0
margin_right = 318.0
margin_bottom = 494.0
custom_fonts/font = ExtResource( 3 )
text = "Fullscreen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = -112.0
margin_top = 592.0
margin_right = 304.0
margin_bottom = 640.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect2"]
margin_left = 8.0
margin_top = 8.00001
margin_right = 410.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 1 )
text = "Music by Alex McCulloch
https://opengameart.org/users/pro-sensory
"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="new_game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="level_select" to="." method="_on_level_select_pressed"]
[connection signal="pressed" from="fullscreen" to="." method="_on_fullscreen_pressed"]
